# bitslice

./: Cargo.toml  readme.md
examples/: add.rs  popcnt_cmp.rs
src/: arithmetic.rs  lib.rs  transpose.rs
